fixed spacing inconsistencies

--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,8 @@
 #content {
-	padding: 0;
+	padding: 2em 0;
+	display: flex;
+	flex-direction: column;
+	gap: 2em;
 }
 
 
@@ -7,7 +10,6 @@
 
 .month {
 	background: black;
-	padding: 2em;
 	/* background: linear-gradient(1deg, #000000, #000000b0, #0000008c); */
 }
 
@@ -15,10 +17,9 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-bottom: 1em;
+	margin-bottom: 2em;
 	position: sticky; 
 	top: 0;
-	padding: 1em 0;
 	background: black;
 }
 .month-header-metadata {
@@ -113,6 +114,11 @@
 	pointer-events: none;
 }
 
+@media screen and (max-width: 1100px) {
+	#content {
+		padding: 2em;
+	}
+}
 
 @media screen and (max-width: 750px) {
 	.post {
